Bug 58250 -- this fixes a situation where getting a NS_GOTFOCUS before the matching NS_DEACTIVATE would fire a blur on the wrong content/window/document, leaving it in a fairly broken focus state. r=saari, sr=hyatt, a=tor.